@@ -127,4 +127,22 @@ extern 	GtkTooltips *tooltips;
  */
 GtkWidget* lookup_widget (GtkWidget* widget, const gchar* widget_name);
 
+
+/**
+  create a GtkOptionMenu that contains all game names
+  @param active_type which game to set active by default
+  @param filterfunc only add game to menu if this function return true. can be
+	  NULL to show all
+  @param callback a callback function to connect if a game entry is activated.
+	  the user_data will be set to the game type
+  @return a GtkOptionMenu
+  */
+GtkWidget *create_server_type_menu (enum server_type active_type,
+	gboolean (*filterfunc)(enum server_type),
+	GtkSignalFunc callback);
+
+
+/** Skip a game if it's not configured and show only configured is enabled */
+gboolean create_server_type_menu_filter_configured(enum server_type type);
+
 #endif /* XQF_UI_H__ */
